crates/aranya-policy-compiler/tests/data/global_let/serialize_invalid_expression.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid expression
  |
4 | let x = serialize( Bar { a: true, } )
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This expression is not valid in a const context
